filter and search

--- a/myapp/templates/authorization/login.html
+++ b/myapp/templates/authorization/login.html
@@ -11,7 +11,7 @@
     <title>Login</title>
 </head>
 <body>
-    <div class="main w-full h-screen  bg-gradient-to-r from-blue-300 to-fuchsia-400  flex flex-col justify-center items-center" >
+    <div class="main w-full h-screen  bg-gradient-to-r from-blue-400 to-fuchsia-300  flex flex-col justify-center items-center" >
       
         <div class="login h-[87vh] w-[90vw] lg:h-[90vh] lg:w-[30vw]  rounded-[2vw] bg-white flex flex-col justify-evently items-center">
         <div class="leftdiv  h-[20vh] mt-8">
@@ -23,7 +23,7 @@
                 {% csrf_token %}
            
                 <div class="head h-[15vh]   flex justify-center items-center">
-                <h1 class="text-black font-bold text-center  text-4xl">LOGIN</h1>
+                <h1 class="text-black font-bold text-center  text-4xl">LOG IN</h1>
             </div>
 
             <div class="userpassdiv flex flex-col justify-between items-center gap-8">
@@ -48,7 +48,7 @@
                 <!-- </div> -->
               </div>
                 <div class="buttondiv w-full flex flex-col gap-2 justify-center items-center">
-                    <button class="bg-blue-700 text-white  px-12 py-2 rounded-full">Login</button>
+                    <button class=" bg-gradient-to-r from-blue-300 to-fuchsia-400 text-black font-bold px-12 py-2 rounded-full">LOG IN</button>
                     <div><p id="error-message" class="text-black font-bold "></p></div>
     
                 </div>
