--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet"/>
     <title>{% block title %}Dental{% endblock %}</title>
 </head>
 <body class="bg-white lg:overflow-hidden">
@@ -23,8 +24,8 @@
 
 <!--noti and logout Buttons -->
                     <div class="buttonsdiv flex gap-8">
-                              <button id="noti-open-model" class="bg-[#fde9e9] w-[12vw] lg:w-[3vw] h-[5vh] rounded hover:bg-white"><i class="fa-solid fa-bell"></i></button>
-                            <button class="bg-[#fde9e9] w-[12vw] lg:w-[3vw] h-[5vh] rounded hover:bg-white"><a href="{% url 'logout' %}"><i class="fa-solid fa-right-from-bracket"></i></a></button>
+                              <button id="noti-open-model" class="bg-[#fde9e9] w-[12vw] lg:w-[3vw] h-[5vh] rounded hover:bg-white" ><i class="fa-solid fa-bell"></i></button>
+                            <button class="bg-[#fde9e9] w-[12vw] lg:w-[3vw] h-[5vh] rounded hover:bg-white" title="Logout"><a href="{% url 'logout' %}"><i class="fa-solid fa-right-from-bracket"></i></a></button>
 
                    </div>
 
@@ -68,8 +69,8 @@
            </div>
 
            <!-- delete modal -->
-    <div id="delete-modal" class="fixed inset-0 flex items-center justify-center bg-gray-600 bg-opacity-50 hidden">
-      <div class="bg-white p-6 rounded-lg shadow-lg w-[30vw]">
+    <div id="delete-modal" class="fixed inset-0 flex items-center justify-center z-50 bg-gray-600 bg-opacity-50 hidden">
+      <div class="bg-white p-6 rounded-lg shadow-lg w-[80vw] lg:w-[30vw] z-50">
           <h2 class="text-xl font-semibold mb-4">Confirm Deletion</h2>
           <p class="mb-4">Are you sure you want to delete this hospital?</p>
           <div class="flex justify-end">
@@ -81,8 +82,8 @@
    
 
   <!-- Edit Modal -->
-<div id="edit-modal" class="fixed inset-0 flex items-center justify-center bg-gray-600 bg-opacity-50  hidden">
-  <div class="bg-white p-6 rounded-lg shadow-lg lg:w-[40vw] lg:h-auto ">
+<div id="edit-modal" class="fixed inset-0 flex items-center justify-center bg-gray-600 bg-opacity-50 z-50  hidden">
+  <div class="bg-white p-6 rounded-lg shadow-lg w-[80vw] lg:w-[40vw] z-50 lg:h-auto ">
       <h2 class="text-xl font-semibold mb-4">Edit Hospital</h2>
       <form id="edit-form" method="post" action="{% url 'edit_hospital' %}">
           {% csrf_token %}
@@ -98,7 +99,7 @@
           </div>
           <div class="mb-4">
               <label for="hospital-email" class="block text-sm font-semibold">Email</label>
-              <input type="email" name="email" id="hospital-email" pattern="^[a-z][a-z0-9._%+-]*@[a-z0-9.-]+\.[a-z]{2,}$" class="w-full p-2 border border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 rounded">
+              <input type="email" name="email" id="hospital-email" pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$" class="w-full p-2 border border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 rounded">
           </div>
           <div class="mb-4">
               <label for="hospital-subscript" class="block text-sm font-semibold">Subscription Type</label>
@@ -159,7 +160,7 @@
                              
                          </div> 
                          <div class="flex flex-col w-3/4">
-                             <label class=" text-left font-medium">Email</label> 
+                             <label  class=" text-left font-medium">Email</label> 
                              {{ form.email }}
                          </div>
                          <div class="flex flex-col w-3/4">
@@ -195,7 +196,7 @@
          </div>
 
          <!-- child block contents -->
-          <div class="maintablediv w-full h-[100vh] lg:w-[75vw] lg:h-screen  flex flex-col justify-center items-center px-8 lg:px-0 lg:pr-10 gap-4">
+          <div class="maintablediv w-full h-[130vh] lg:w-[75vw] lg:h-screen  flex flex-col justify-center items-center px-8 lg:px-0 lg:pr-10 gap-4">
    
               {% block content %}
               
