--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -3,11 +3,43 @@
 {% load static %}
 {% block title %}Dashboard{% endblock %}
 {% block content %}
-    <div class="w-full flex lg:flex-row gap-20 justify-end">
+    <div class="w-full flex flex-col lg:flex-row gap-10 justify-end">
     <div class="registerdiv w-[50vw] h-[9vh] lg:h-[9vh] lg:w-[25vw] bg-gray-200 flex justify-center items-center  border rounded-[1vw]">
         <button id="openmodal"><h1 class="font-medium text-sm lg:text-xl">REGISTER A NEW HOSPITAL</h1></button>
 
     </div>
+    <form id="year-range-form" action="{% url 'dashboard' %}" method="get"  class=" items-center relative">
+         <button type="button" title="Filter" id="dropdownButton"> 
+            <img src="{% static 'images/filter.png' %}" alt="filter image" class="lg:w-[50%] w-[40%]">
+         </button>
+         <div id="dropdownMenu" class="hidden origin-top-left absolute border z-50 border-gray-300 left-0  mt-2 w-[90vw] h-[10vh] lg:w-[27vw] lg:h-[18vh]
+         rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 ">
+            <div class="py-1" role="menu" aria-orientation="vertical" aria-labelledby="dropdownButton">
+               
+                <div class="year-select-container flex gap-2 pl-4 lg:pt-8 hover:bg-gray-200">    
+                <a href="#" class="block px-2 py-1 lg:px-4 lg:py-2 text-sm text-gray-700 border-2 border-gray-600 hover:bg-gray-100" role="menuitem">
+                      <select id="startYearSelect" name="startYear" >
+                    <option   value="">Select Start Year
+
+                    </option>
+                  
+                </select></a>
+                <a href="#" class="block px-2 py-1 lg:px-4 lg:py-2 text-sm text-gray-700  border-2 border-gray-600 hover:bg-gray-100" role="menuitem">
+                 <select id="endYearSelect" name="endYear" >
+                    <option value="">Select End Year
+
+                    </option>
+                  
+                </select></a>
+                <button type="submit" class="">
+                    <i class="ri-arrow-right-circle-line text-2xl"></i>
+                </button>
+                </div>
+               
+            </div>
+        </div>
+
+    </form>
     <form action="{% url 'dashboard' %}" method="get" id="search-form">
         <div class="relative">
             <input type="text" id="searchInput" placeholder="Search......" name="query" class="px-4 py-1  border-2 border-gray-400 rounded focus:outline-none focus:border-gray-600 pl-10">
@@ -42,9 +74,10 @@
                         <th class="px-4 py-3 text-left text-sm leading-4 font-bold text-black whitespace-nowrap uppercase tracking-wider">DATE OF REGISTER</th>
                         <th class="px-4 py-3 text-left text-sm leading-4 font-bold text-black whitespace-nowrap  uppercase tracking-wider">DATE OF RENEWAL</th>
                         <th class="px-4 py-3 text-left text-sm leading-4 font-bold text-black uppercase tracking-wider">RENEW</th>
-                        <th class="px-4 py-3 text-left text-sm leading-4 font-bold text-black uppercase tracking-wider">ACTION</th>
+                       
                         <th class="px-4 py-3 text-left text-sm leading-4 font-bold text-black uppercase tracking-wider">STATUS</th>
                         <th class="px-4 py-3 text-left text-sm leading-4 font-bold text-black uppercase tracking-wider">BLOCK</th>
+                        <th class="px-6 py-3 text-left text-sm leading-4 font-bold text-black uppercase tracking-wider">ACTION</th>
 
                 </thead>
                 <!-- Table body -->
@@ -77,18 +110,7 @@
                             <span class="text-yellow-800 font-medium">Pending</span>
                             {% endif %}
                         </td>
-                        <td class="px-4 py-4 whitespace-nowrap">
-                            <button type="button" id="edit-button"   data-id="{{ hospital.pk }}"
-                            data-name="{{ hospital.name }}"
-                            data-phone="{{ hospital.phone }}"
-                            data-email="{{ hospital.email }}"
-                            data-subscript="{{ hospital.subscript }}"
-                            data-days="{{ hospital.no_of_days }}"
-                            data-amount="{{ hospital.amount }}"
-                            data-registration-date="{{ hospital.registration_date|date:'d-m-Y' }}"
-                            data-renewal-date="{{ hospital.renewal_date|date:'d-m-Y' }}"> <i class="fa-solid fa-file-pen ms-3"></i></button>
-                            <button type="button" class="delete-button"  data-href="{% url 'delete' hospital.pk %}"><i class="fa-solid fa-trash ms-2"></i></button>
-                        </td>
+                        
                         <td class="px-4 py-4 whitespace-nowrap">
                             {% if hospital.is_blocked %}
                                Blocked
@@ -102,6 +124,18 @@
                                 {% csrf_token %}
                             <button type="submit" class="bg-red-400 hover:bg-red-700 text-white font-bold py-1 px-2 rounded ">Block</button>
                         </form>
+                        </td>
+                        <td class="px-4 py-4 whitespace-nowrap">
+                            <button type="button" id="edit-button"   data-id="{{ hospital.pk }}"
+                            data-name="{{ hospital.name }}"
+                            data-phone="{{ hospital.phone }}"
+                            data-email="{{ hospital.email }}"
+                            data-subscript="{{ hospital.subscript }}"
+                            data-days="{{ hospital.no_of_days }}"
+                            data-amount="{{ hospital.amount }}"
+                            data-registration-date="{{ hospital.registration_date|date:'d-m-Y' }}"
+                            data-renewal-date="{{ hospital.renewal_date|date:'d-m-Y' }}"> <i class="fa-solid fa-file-pen ms-3"></i></button>
+                            <button type="button" class="delete-button"  data-href="{% url 'delete' hospital.pk %}"><i class="fa-solid fa-trash ms-2"></i></button>
                         </td>
                     </tr>
                     {% endfor %}
@@ -125,4 +159,5 @@ document.addEventListener("DOMContentLoaded", function() {
 <script src="{% static 'js/register_modal.js' %}"></script>
 <script src="{% static 'js/noti_modal.js' %}"></script>
 <script src="{% static 'js/delete_modal.js' %}"></script>
+<script src="{% static 'js/filter.js' %}"></script>
 {% endblock %}
