--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,27 +1,36 @@
-.password-container{
-    position: relative;
+/* login password eye symbol */
+.password-container {
+  position: relative;
 }
-.password-toggle-icon {
-    position: absolute;
-    top: 50%;
-    right: 10px;
-    transform: translateY(-50%);
-    cursor: pointer;
-  }
-  
-  .password-toggle-icon i {
-    font-size: 18px;
-    line-height: 1;
-    color: #333;
-    transition: color 0.3s ease-in-out;
-    margin-bottom: 20px;
-  }
-  
-  .password-toggle-icon i:hover {
-    
-    color: #000;
-  }
 
+.password-toggle-icon {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+
+.password-toggle-icon svg {
+  font-size: 18px;
+  line-height: 1;
+  color: #333;
+  transition: color 0.3s ease-in-out;
+}
+
+.password-toggle-icon svg:hover {
+  color: #000;
+}
+
+/* Style for the cross line */
+#eye-cross {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(-50%);
+  stroke: black;
+}
 
   /*Registration Modal initial and active states */
   #modal {
@@ -43,9 +52,10 @@
   transform: translateY(0);
 }
 
+
 /* Notification modal */
 
-#noti_modal {
+/* #noti_modal {
   position: fixed;
   inset: 0;
   display: flex;
@@ -62,10 +72,10 @@
   opacity: 1;
   pointer-events: auto;
   transform: translateY(0);
-}
+} */
 
 
-/* Scrollwidth */
+/* Scrollbar width */
 ::-webkit-scrollbar {
   width: 8px; 
   height: 8px;
@@ -76,14 +86,14 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(187, 179, 179, 0.5); /* Semi-transparent thumb */
+  background-color: rgba(187, 179, 179, 0.5);
   border-radius: 4px; 
 }
 
 /* filter registration date */
 
 .year-select-container {
-  display: flex; /* Aligns children horizontally */
+  display: flex; 
   align-items: center;
   gap:20px ;
 }
@@ -93,3 +103,4 @@
   align-items: center; 
   gap: 20px; 
 }
+
